repl box, overflow-y is still an issue, fuck this shit

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,8 @@ body {
 html, body {
   height: 100vh;
   width: 100vw;
+  max-height: 100vh;
+  min-height: 100vh;
 }
 
 @layer utilities {
